--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+[Uu]ser[Ss]ettings/
+git rm --cached -r UserSettings/
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
